src/pages/Home/Home.module.scss
@use '@/styles/screen';

.home {
  overflow-x: hidden;

  .searchPanel {
    box-sizing: border-box;
    min-height: 200px;
    padding: 50px 0 10px;
    background: linear-gradient(45deg, hsl(204deg 65% 71% / 100%) 0%, hsl(273deg 34% 75% / 100%) 43%, hsl(358deg 43% 75% / 100%) 57%, hsl(43deg 96% 63% / 100%) 100%);
    color: white;
    text-align: center;

    h1 {
      margin: 0 0 1rem;
      font-size: 2.5rem;
      line-height: 3.25rem;
    }

    .searchRow {
      display: flex;
      align-items: stretch;
      gap: 0.75rem;
      box-sizing: border-box;
      width: 100%;
      max-width: 1140px;
      margin: 0 auto;
      padding: 0 32px;

      > * {
        height: 48px;
        box-sizing: border-box;
      }

      @include screen.small-to-medium {
        flex-direction: column;
        padding: 0 16px;
      }
    }
  }

  .content {
    padding: 0 32px 32px;

    @include screen.small-to-medium {
      padding: 0 16px 16px;
    }

    .pillsRow {
      display: flex;
      justify-content: space-between;
      align-items: center;
      gap: 0.5rem;
      padding: 0.75rem 0;
      flex-wrap: wrap;
    }

    .mainContent {
      width: 100%;
      min-width: 0;

      .emptyState {
        color: var(--grey-4);
        text-align: center;

        img {
          display: block;
          margin: 32px auto;
        }
      }

      .activeFilters {
        margin-bottom: 16px;
      }
    }
  }
}

